Moved initial tinkerings over to Git repo landing-page.js passes a JSON object to the .hbs now, rather than a string: this makes templating easier

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,12 @@
 {{!< default}}
 <div class="container">
 	<h1>NAP TECH TEST</h1>
-	<p>Create a categloue expirence using two sample product APIs.</p>
+	<p>Create a <u>categloue</u> <u>expirence</u> using two sample product APIs.</p>
 	<h2>Product lists</h2>
 	<code>http://127.0.0.1:3000/api/products</code>
 	<h2>Product details</h2>
 	<code>http://127.0.0.1:3000/api/product/$id</code>
-	<h2>Preview of existing expiences<h2>
+	<h2>Preview of existing <u>expiences</u></h2>
 	<table style="width:100%">
 		<tr>
 			<td>Desktop</td>
@@ -19,3 +19,5 @@
 		</tr>
 	</table>
 </div>
+
+{{ products }}
