--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,21 +3,26 @@
 	<h1>NAP TECH TEST</h1>
 	<p>Create a <u>categloue</u> <u>expirence</u> using two sample product APIs.</p>
 	<h2>Product lists</h2>
-	<code>http://127.0.0.1:3000/api/products</code>
-	<h2>Product details</h2>
-	<code>http://127.0.0.1:3000/api/product/$id</code>
-	<h2>Preview of existing <u>expiences</u></h2>
-	<table style="width:100%">
-		<tr>
-			<td>Desktop</td>
-			<td>Mobile</td>
-			
-		</tr>
-		<tr>
-			<td><img src="/images/desktop.jpg" /></td>
-			<td><img src="/images/mobile.jpg" /></td>
-		</tr>
-	</table>
-</div>
 
-{{ products }}
+    <table style="width: 100%">
+        {{#everyNth products.data 3}}
+            {{#if isModZeroNotFirst}}
+                </tr>
+            {{/if}}
+
+            {{#if isModZero}}
+                <tr>
+            {{/if}}
+
+            <td>
+                <img src="{{image.outfit}}"/>
+                <br/>
+                {{ name }}
+            </td>
+
+            {{#if isLast}}
+            </tr>
+            {{/if}}
+        {{/everyNth}}
+    </table>
+</div>
